# udemy-BeautifulSoup-Requests-Selenium

./: README.md  pyproject.toml  test.py  test.txt
section11/: metacharacters-kr.py  special+sequences-kr.py
section15/: Intro+to+Selenium.py
section15/Searching-Elements-and-Inputting-Data/: searching+elements+and+using+text+fields.py
section16/: Instagram-Selenium-Final-Code-2018-06-22.py
section2/: gistfile1.txt
section6/: user_agent.py
section9/: parent.py
