[project]
name = "udemy-beautifulsoup-requests-selenium"
version = "0.1.0"
description = ""
authors = [
    {name = "bluebamus",email = "bluebamus@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "xlsxwriter (>=3.2.2,<4.0.0)",
    "xlrd (>=2.0.1,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "fake-useragent (>=2.0.3,<3.0.0)",
    "lxml (>=5.3.1,<6.0.0)",
    "selenium (>=4.29.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "selenium-stealth (>=1.0.6,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
